--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^2.5.1",
+    "@thirdweb-dev/sdk": "^2.3.32",
+    "ethers": "^5.6.9",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
