--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ethers": "^5.6.9",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^3.1.6"
   },
   "devDependencies": {
     "eslint": "8.20.0",
