--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^3.1.6"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "tailwindcss": "^3.1.6"
