--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "tailwind-styled-components": "^2.1.8"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.25",
