--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.25",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7"
   }
 }
